--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <div id="timer">00.00.000</div>
+  <button id="start">スタート</button>
+  <button id="stop">ストップ</button>
+  <button id="reset">リセット</button>
   
   <script src="js/main.js"></script>
 </body>
