ボタンスタイルの調整

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div id="timer">00:00.000</div>
-  <button id="start">スタート</button>
-  <button id="stop">ストップ</button>
-  <button id="reset">リセット</button>
+  <div class="container">
+    <div id="timer">00:00.000</div>
+    <div class="controls">
+      <div class="btn" id="start">スタート</div>
+      <div class="btn" id="stop">ストップ</div>
+      <div class="btn" id="reset">リセット</div>
+    </div>
+  </div>
   
   <script src="js/main.js"></script>
 </body>
